# HW_mod_12

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
